fixed dark mode issue

--- a/styles/journal.module.css
+++ b/styles/journal.module.css
@@ -4,8 +4,6 @@
     height: 100vh;
 }
 
-
-
 .usernameSection {
     border-radius: 12px;
     display: flex;
@@ -54,11 +52,13 @@
 }
 
 .journalEntryDate {
+    color: whitesmoke;
     font-size: 1.2rem;
     font-weight: bold;
 }
 
 .journalContent {
+    color: whitesmoke;
     white-space: pre-wrap;
     word-wrap: break-word;
 }
@@ -112,6 +112,7 @@
 
 
 .journalEntryTopTitle {
+    color: whitesmoke;
     font-size: 30px;
     font-weight: bold;
 }
@@ -145,6 +146,7 @@
 }
 
 .dateInput {
+    color: #161719;
     padding: 10px;
     margin-right: 85%;
     font-size: 1rem;
@@ -155,6 +157,7 @@
 .textInput {
     padding: 10px;
     font-size: 1rem;
+    color: black;
     height: 100px;
     border: 1px solid #ccc;
     border-radius: 5px;
